docs: fix padding of homepage on mobile

--- a/docs/resources/css/theme.css
+++ b/docs/resources/css/theme.css
@@ -158,6 +158,9 @@
   .hero {
     flex-direction: column;
     gap: 0;
+    min-height: 0;
+    justify-content: flex-start;
+    padding-top: 1rem;
   }
 
   .hero-content {
